--- a/index.html
+++ b/index.html
@@ -2,29 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Moti Mausi's Pickles</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
+    <img src="assets/logo.png" alt="Moti Mausi Logo" class="logo">
     <nav>
-      <div class="logo">Moti Mausi's</div>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Our Range</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
   <section class="hero">
     <div class="hero-text">
-      <h1>Luxury in a Jar</h1>
-      <p>Handcrafted village pickles made by Moti Mausi with love and legacy.</p>
-      <a href="products.html" class="btn">Explore Our Range</a>
+      <h1>Moti Mausi’s Achaar</h1>
+      <p>From Our Village with Love</p>
+      <a href="products.html" class="btn">View Our Range</a>
     </div>
   </section>
-  <footer>© 2025 Moti Mausi’s Pickles.</footer>
+  <footer>
+    <p>&copy; 2025 Moti Mausi's Pickles</p>
+  </footer>
 </body>
 </html>
